Add nav bar, add functionality to switch pages

--- a/src/template.html
+++ b/src/template.html
@@ -8,14 +8,22 @@
   <body>
     <header>
       <nav>
-        <div>
-          <button type="button">Home</button><button type="button">Menu</button
-          ><button type="button">About</button
-          ><button type="button">Contact</button>
+        <div class="nav-logo-container">
+          <p>RESTAURANT LOGO</p>
+        </div>
+        <div class="nav-btns-container">
+          <button type="button" id="home-btn" class="nav-btn">Home</button
+          ><button type="button" id="menu-btn" class="nav-btn">Menu</button
+          ><button type="button" id="about-btn" class="nav-btn">About</button
+          ><button type="button" id="contact-btn" class="nav-btn">
+            Contact
+          </button>
+        </div>
+        <div class="nav-cta-btn">
+          <button type="button">Order Online</button>
         </div>
       </nav>
     </header>
     <div id="content"></div>
-    <h1>Hello world</h1>
   </body>
 </html>
