Initial design for hero home page

--- a/src/template.html
+++ b/src/template.html
@@ -9,7 +9,11 @@
     <header>
       <nav>
         <div class="nav-logo-container">
-          <p>RESTAURANT LOGO</p>
+          <img
+            src="./assets/imgs/prancing-pony-logo-1.webp"
+            alt="Prancing pony logo"
+            loading="eager"
+          />
         </div>
         <div class="nav-btns-container">
           <button type="button" id="home-btn" class="nav-btn">Home</button
