Add css styling

--- a/src/template.html
+++ b/src/template.html
@@ -24,10 +24,35 @@
           </button>
         </div>
         <div class="nav-cta-btn">
-          <button type="button">Order Online</button>
+          <button type="button" class="nav-btn" id="order-online-btn">
+            Order Online
+          </button>
         </div>
       </nav>
     </header>
     <div id="content"></div>
+    <footer>
+      <div class="footer-container">
+        <div class="footer-column">
+          <img
+            src="./assets/imgs/prancing-pony-logo-1.webp"
+            alt="Prancing pony logo"
+            loading="eager"
+          />
+        </div>
+        <div class="footer-column">
+          <h2>Links</h2>
+        </div>
+        <div class="footer-column">
+          <h2>Location</h2>
+        </div>
+      </div>
+      <div class="copyright">
+        © Third Age 3025–2025 The Prancing Pony, Bree. All rights reserved.
+        Proudly serving travelers, Rangers, and the occasionally mysterious. The
+        Prancing Pony and all associated marks are property of Barliman
+        Butterbur & Co.
+      </div>
+    </footer>
   </body>
 </html>
