--- a/src/template.html
+++ b/src/template.html
@@ -42,16 +42,29 @@
         </div>
         <div class="footer-column">
           <h2>Links</h2>
+          <nav class="footer-btns">
+            <button type="button" id="home-btn" class="nav-btn">Home</button
+            ><button type="button" id="menu-btn" class="nav-btn">Menu</button
+            ><button type="button" id="about-btn" class="nav-btn">About</button
+            ><button type="button" id="contact-btn" class="nav-btn">
+              Contact
+            </button>
+          </nav>
         </div>
         <div class="footer-column">
           <h2>Location</h2>
+          <a href="https://tolkiengateway.net/wiki/The_Prancing_Pony"
+            >1 Bree Hill Way Bree, Eriador 3025 Middle-earth</a
+          >
         </div>
       </div>
       <div class="copyright">
-        © Third Age 3025–2025 The Prancing Pony, Bree. All rights reserved.
-        Proudly serving travelers, Rangers, and the occasionally mysterious. The
-        Prancing Pony and all associated marks are property of Barliman
-        Butterbur & Co.
+        <p>
+          © Third Age 30252025 The Prancing Pony, Bree. All rights reserved.
+          Proudly serving travelers, Rangers, and the occasionally mysterious.
+          The Prancing Pony and all associated marks are property of Barliman
+          Butterbur & Co.
+        </p>
       </div>
     </footer>
   </body>
