--- a/src/template.html
+++ b/src/template.html
@@ -3,7 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Resturant Page</title>
+    <title>The Prancing Pony</title>
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./assets/imgs/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/imgs/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./assets/imgs/favicon-16x16.png"
+    />
+    <link rel="manifest" href="./site.webmanifest" />
   </head>
   <body>
     <header>
