Change date and add scroll to top functionality on nav links

--- a/src/template.html
+++ b/src/template.html
@@ -78,9 +78,9 @@
       </div>
       <div class="copyright">
         <p>
-          © Third Age 30252025 The Prancing Pony, Bree. All rights reserved.
-          Proudly serving travelers, Rangers, and the occasionally mysterious.
-          The Prancing Pony and all associated marks are property of Barliman
+          © Third Age | The Prancing Pony, Bree. All rights reserved. Proudly
+          serving travelers, Rangers, and the occasionally mysterious. The
+          Prancing Pony and all associated marks are property of Barliman
           Butterbur & Co.
         </p>
       </div>
